--- a/front-end/src/app/ui/header-bar/header-bar.component.html
+++ b/front-end/src/app/ui/header-bar/header-bar.component.html
@@ -1,9 +1,7 @@
 
   <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>Home</span>
+    <app-main-menu></app-main-menu>
+    <span>{{appName}}</span>
     <span class="example-spacer"></span>
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       
