(05/11) Desenvolvimento componente listagem de dados

--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -2,3 +2,28 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+#content {
+    margin: 40px;
+}
+.mat-table{
+    width: 100%;
+}
+.cell-align-right{
+    text-align: right !important;
+}
+.cell-align-center{
+    text-align: center !important;
+}
+.mat-row .mat-raised-button{
+
+    visibility: hidden;
+}
+
+.mat-row:hover .mat-raised-button{
+    visibility: visible;
+
+}
+.mat-row:hover{
+    filter: brightness(90%);
+}
