--- a/front-end/src/app/curso/curso-list/curso-list.component.html
+++ b/front-end/src/app/curso/curso-list/curso-list.component.html
@@ -1,4 +1,5 @@
-<table mat-table [dataSource]="cursos" class="mat-elevation-z8">
+<h1>Listagem de cursos</h1>
+<table mat-table [dataSource]="cursos" class="mat-elevation-z4">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -9,7 +10,7 @@
     <td mat-cell *matCellDef="let curso"> {{curso.nome}} </td>
   </ng-container>
 
-    <!-- Name Column -->
+    <!-- Carga horária Column -->
   <ng-container matColumnDef="carga_horaria">
     <th mat-header-cell *matHeaderCellDef> CH </th>
     <td mat-cell *matCellDef="let curso"> {{curso.carga_horaria}} </td>
@@ -24,9 +25,27 @@
   <!-- Valor Column -->
   <ng-container matColumnDef="valor_curso">
     <th mat-header-cell *matHeaderCellDef> Valor </th>
-    <td mat-cell *matCellDef="let curso"> {{curso.valor_curso}} </td>
+    <td mat-cell class="cell-align-right" *matCellDef="let curso"> {{curso.valor_curso | currency:'BRL':'symbol':'1.2-2':'pt'}} </td>
   </ng-container>
   
+  <!-- Editar coluna -->
+  <ng-container matColumnDef="editar">
+    <th mat-header-cell class="cell-align-center" *matHeaderCellDef> Editar </th>
+    <td mat-cell class="cell-align-center" *matCellDef="let curso"> 
+        <a mat-raised-button color="accent" tittle="Editar">
+            <mat-icon>edit</mat-icon>
+        </a>
+    </td>
+  </ng-container> 
+
+    <ng-container matColumnDef="excluir">
+    <th mat-header-cell class="cell-align-center" *matHeaderCellDef> Excluir </th>
+    <td mat-cell class="cell-align-center" *matCellDef="let curso"> 
+       <button mat-raised-button color="warn" title="Excluir" (click)="excluir(curso._id)">
+        <mat-icon>delete_forever</mat-icon>
+       </button>
+    </td>
+  </ng-container> 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
